--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -8,3 +8,8 @@ jobs:
   build:
     name: Post welcome comment
     runs-on: unbuntu-latest
+    steps:
+      - run: gh pr comment $PR_URL --body "Welcome to the repo!"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GUTHUB_TOKEN }}
+          PR_URL: ${{ github.event.pull_request.html_url }}
